--- a/styles.css
+++ b/styles.css
@@ -15,13 +15,13 @@ li {
 
 img {
   padding: 1.5%;
+  cursor: pointer;
 }
 
 #styles {
   border-top: 2px solid rgba(0, 0, 0, 0.123);
   display: flex;
   align-items: center;
-  cursor: pointer;
   flex-wrap: wrap;
 }
 
@@ -74,4 +74,8 @@ html {
 
 #crest {
   width: 10%;
+}
+
+#prefect {
+  width: 5%;
 }
