--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 #container {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr;
   gap: 1px;
   padding: 1.5%;
   text-align: center;
@@ -22,7 +22,8 @@ img {
   border-top: 2px solid rgba(0, 0, 0, 0.123);
   display: flex;
   align-items: center;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
+  height: 150px;
 }
 
 h1 {
@@ -35,6 +36,30 @@ h1 {
 
 html {
   background-color: rgb(255, 236, 209);
+}
+
+.right {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.right button {
+  background-color: #afa04c; /* Green */
+  height: 45px;
+  border: none;
+  border-radius: 2px;
+  border: 2px solid rgba(51, 51, 51, 0.301);
+  color: rgb(0, 0, 0);
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin-top: 2.8%;
+}
+
+.left {
+  display: flex;
+  justify-content: center;
 }
 
 #popup {
@@ -163,4 +188,44 @@ button.closebuttons {
 #crest {
   justify-content: flex-end;
   max-width: 50%;
+}
+
+@media only screen and (max-width: 600px) {
+  #styles {
+    flex-wrap: wrap;
+    height: 200px;
+  }
+  .right {
+    display: flex;
+    justify-content: baseline;
+  }
+
+  .right button {
+    background-color: #afa04c; /* Green */
+    height: 30px;
+    border: none;
+    border-radius: 2px;
+    border: 2px solid rgba(51, 51, 51, 0.301);
+    color: rgb(0, 0, 0);
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin-top: 0%;
+  }
+
+  .left {
+    display: flex;
+    justify-content: center;
+  }
+  #squad {
+    justify-content: flex-end;
+    max-width: 100%;
+  }
+
+  img {
+    padding: 1.5%;
+    width: 100%;
+    cursor: pointer;
+  }
 }
