--- a/styles.css
+++ b/styles.css
@@ -296,3 +296,9 @@ button.closebuttons {
   font-size: 16px;
   margin-top: 0%;
 }
+
+#squad2 {
+  justify-content: flex-end;
+  max-width: 5%;
+  z-index: 2;
+}
