--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,36 @@ body {
 #test {
 }
 
+.filter {
+  background-color: #d2c160;
+  height: 45px;
+  border: none;
+  border-radius: 2px;
+  border: 2px solid rgba(51, 51, 51, 0.301);
+  color: rgb(0, 0, 0);
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin-top: 2.8%;
+  cursor: pointer;
+}
+
+.filter:hover {
+  background-color: #afa04c;
+  height: 45px;
+  border: none;
+  border-radius: 2px;
+  border: 2px solid rgba(51, 51, 51, 0.301);
+  color: rgb(0, 0, 0);
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin-top: 2.8%;
+  cursor: pointer;
+}
+
 li {
   list-style-type: none;
   /*font-family: "Merienda", cursive;*/
