--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,17 @@ body {
   max-width: 50%;
 }
 
+input {
+  border: none;
+  border-radius: 2px;
+}
+.search {
+  padding-top: 1%;
+  padding-bottom: 0.5%;
+  margin: 0 auto;
+  width: 50%;
+}
+
 li {
   list-style-type: none;
   /*font-family: "Merienda", cursive;*/
