--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
 }
 
 body {
-  margin: 0;
+  margin: 0 auto;
 }
 
 #test {
@@ -28,6 +28,7 @@ body {
   font-size: 16px;
   margin-top: 2.8%;
   cursor: pointer;
+  width: 16%;
 }
 
 .filter:hover {
@@ -48,6 +49,9 @@ body {
 .filtering {
   margin: 0 auto;
   max-width: 50%;
+  display: flex;
+  justify-content: space-evenly;
+  gap: 10px;
 }
 
 input {
@@ -398,4 +402,10 @@ button.closebuttons {
 
 .width {
   max-width: 50%;
+}
+
+.center {
+  text-align: center;
+  font-size: 2rem;
+  padding: 2.5%;
 }
