--- a/styles.css
+++ b/styles.css
@@ -62,7 +62,7 @@ input {
   margin: 0 auto;
   width: 100%;
   background-color: rgba(128, 128, 128, 0.295);
-  height: 5.5%;
+  height: 280px;
   border: 2px solid rgba(0, 0, 0, 0.123);
   margin-left: 20%;
   margin-top: 15%;
