--- a/styles.css
+++ b/styles.css
@@ -304,7 +304,7 @@ button.closebuttons {
   }
 
   .right button {
-    background-color: #afa04c; /* Green */
+    background-color: #afa04c;
     height: 30px;
     border: none;
     border-radius: 2px;
@@ -317,7 +317,6 @@ button.closebuttons {
     cursor: pointer;
     margin-top: 0%;
   }
-
   .left {
     display: flex;
     justify-content: center;
@@ -332,6 +331,13 @@ button.closebuttons {
     width: 100%;
     cursor: pointer;
   }
+}
+
+.prefectos {
+  width: 5%;
+}
+.crests {
+  width: 5%;
 }
 
 #closebuttonok {
